# D4_JoergenLarsen_PederFlaat

./: README.md  pyproject.toml  walk.py
.github/workflows/: ci.yml
tests/: test_walk.py
walking_home/: __init__.py  explore_model.ipynb  walk.py
walking_home.egg-info/: PKG-INFO  SOURCES.txt
