[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walking_home"
version = "0.1.0"
description = "INF201 project: Walking home from AudMax simulation"
authors = [
  { name = "Jørgen Lundell Larsen, Peder Hetland Flaat" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# Kodepakke
[tool.setuptools.packages.find]
where = ["."]
include = ["walking_home"]

# Notebook inkludert i pakken
[tool.setuptools.package-data]
"walking_home" = ["explore_model.ipynb"]

# ---------- tox ----------

[tool.tox]
env_list = ["py311", "flake8"]

[tool.tox.env.py311]
description = "Kjør pytest med coverage"
deps = [
  "pytest",
  "pytest-cov",
]
commands = [
  ["pytest", "--cov=walking_home", "--cov-report=term-missing"],
]

[tool.tox.env.flake8]
description = "PEP8/format-sjekk"
deps = ["flake8"]
commands = [
  ["flake8", "walking_home", "tests"],
]
